--- a/css/styles.css
+++ b/css/styles.css
@@ -60,4 +60,102 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+body {
+  width: 100%;
+  max-width: 1200px;
+  min-width: 320px;
+  margin: 0 auto;
+}
+
+body {
+  background-color: #ffffff;
+}
+body .wrap {
+  max-width: 1200px;
+  height: auto;
+  margin: auto;
+  background-color: white;
+  box-shadow: 0 1px 9px rgba(0, 0, 0, 0.08);
+}
+body .wrap .header {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: stretch;
+  flex-wrap: wrap;
+}
+body .wrap .top {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 0px 15px;
+}
+body .wrap .top ul {
+  display: flex;
+}
+body .wrap .top ul a {
+  font-family: "Roboto";
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 10px;
+  padding: 0px 10px;
+  color: #333333 !important;
+}
+body .wrap .top ul .main {
+  color: #8e03a4 !important;
+}
+body .wrap .bottom {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  height: 50px;
+  padding: 0px 15px 0px 5px;
+  background-color: #8e03a4;
+}
+body .wrap .bottom ul {
+  display: flex;
+}
+body .wrap .bottom ul a {
+  font-family: "Roboto";
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 10px;
+  color: white;
+  padding: 0px 10px;
+}
+body .wrap .bottom form {
+  position: relative;
+}
+body .wrap .bottom form input {
+  border: 2px solid rgba(129, 129, 129, 0.2);
+  height: 30px;
+  border-radius: 30px;
+  width: 290px;
+}
+body .wrap .bottom form button {
+  position: absolute;
+  background-color: #8e03a4;
+  color: #FFF;
+  border: 2px solid rgba(129, 129, 129, 0.2);
+  border-top-right-radius: 30px;
+  border-bottom-right-radius: 30px;
+  width: 52px;
+  padding-left: 18px;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+body .wrap .bottom form ::-moz-placeholder {
+  padding-left: 12px;
+  font-size: 16px;
+}
+body .wrap .bottom form ::placeholder {
+  padding-left: 12px;
+  font-size: 16px;
 }/*# sourceMappingURL=styles.css.map */
