--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -6,8 +6,8 @@
     flex-wrap: $wrap;
 }
 
-@mixin robotoFont($font: "Roboto", $weight: 400, $size: 12px, $height: 10px) {
-    font-family: $font;
+@mixin robotoFont($weight: 400, $size: 12px, $height: 10px) {
+    font-family: "Roboto";
     font-weight: $weight;
     font-size: $size;
     line-height: $height;
