--- a/scss/pages.scss/_index.scss
+++ b/scss/pages.scss/_index.scss
@@ -17,6 +17,10 @@ body {
             @include goFlex(row, space-between, center);
             padding: 0px 15px;
 
+            .header-img {
+                padding: 0px 15px;
+            }
+
             ul {
                 display: flex;
 
@@ -35,7 +39,7 @@ body {
         .bottom {
             @include goFlex(row, space-between, center);
             height: 50px;
-            padding: 0px 15px 0px 5px;
+            padding: 0px 20px;
             background-color: #8e03a4;
 
             ul {
