--- a/scss/pages.scss/_index.scss
+++ b/scss/pages.scss/_index.scss
@@ -9,78 +9,142 @@ body {
     background-color: white;
     box-shadow: 0 1px 9px rgba(0, 0, 0, .08);
     
-        .header {
-            @include goFlex(column);
+    }
+}
+
+.header {
+    @include goFlex(column);
+
+    .top {
+        @include goFlex(row, space-between, center);
+        padding: 0px 15px;
+
+        @media (max-width: 900px) {
+            display: none;
         }
 
-        .top {
-            @include goFlex(row, space-between, center);
+        .header-img {
             padding: 0px 15px;
-
-            .header-img {
-                padding: 0px 15px;
-            }
-
-            ul {
-                display: flex;
-
-                a {
-                    @include robotoFont(600, 14px);
-                    padding: 0px 10px;
-                    color: #333333 !important;
-                }
-
-                .main {
-                    color: #8e03a4 !important;
-                }
-            }
         }
 
-        .bottom {
-            @include goFlex(row, space-between, center);
-            height: 50px;
-            padding: 0px 20px;
-            background-color: #8e03a4;
+        ul {
+            display: flex;
 
-            ul {
-                display: flex;
-
-                a {
-                    @include robotoFont(700, 14px);
-                    color: white;
-                    padding: 0px 10px;
-                }
+            a {
+                @include robotoFont(600, 14px);
+                padding: 0px 10px;
+                color: #333333 !important;
             }
 
-            form {
-                position: relative;
-
-                input {
-                    border: 2px solid rgba(129, 129, 129, .2);
-                    height: 30px;
-                    border-radius: 30px;
-                    width: 290px;
-                }
-
-                button {
-                    position: absolute;
-                    background-color: #8e03a4;
-                    color: #FFF;
-                    border: 2px solid rgba(129, 129, 129, .2);
-                    border-top-right-radius: 30px;
-                    border-bottom-right-radius: 30px;
-                    width: 52px;
-                    padding-left: 18px;
-                    right: 0;
-                    top: 0;
-                    bottom: 0;
-                }
-
-                ::placeholder {
-                    padding-left: 12px;
-                    font-size: 16px;
-                }
+            .main {
+                color: #8e03a4 !important;
             }
         }
     }
-  }
+
+    .bottom {
+        @include goFlex(row, space-between, center);
+        height: 50px;
+        padding: 0px 20px;
+        background-color: #8e03a4;
+
+        @media (max-width: 900px) {
+            display: none;
+        }
+
+        ul {
+            display: flex;
+
+            a {
+                @include robotoFont(700, 14px);
+                color: white;
+                padding: 0px 10px;
+            }
+        }
+
+        form {
+            position: relative;
+
+            input {
+                border: 2px solid rgba(129, 129, 129, .2);
+                height: 30px;
+                border-radius: 30px;
+                width: 290px;
+            }
+
+            button {
+                position: absolute;
+                background-color: #8e03a4;
+                color: #FFF;
+                border: 2px solid rgba(129, 129, 129, .2);
+                border-top-right-radius: 30px;
+                border-bottom-right-radius: 30px;
+                width: 52px;
+                padding-left: 18px;
+                right: 0;
+                top: 0;
+                bottom: 0;
+            }
+
+            ::placeholder {
+                padding-left: 12px;
+                font-size: 16px;
+            }
+        }
+    }
+
+    .responsive-header { 
+        @include goFlex(row, space-between, center);
+        display: none;
+        border-color: rgba(129, 129, 129, 0.2);
+        border-bottom-width: 1px;
+        border-bottom-style: solid;
+        padding: 0px 15px;
+
+        @media (max-width: 900px) {
+            display: flex;
+        }
+
+        .burger-menu {
+            
+            a {
+                @include goFlex(row);
+                color: #333333;
+            }
+
+            .burger-div {
+                @include goFlex(column, space-between, center);
+                margin: 1px 10px 1px 0px;
+            }
+
+            .burger {
+                display: inline-block;
+                width: 18px;
+                height: 2px;
+                background-color: #333333;
+                border-radius: 5px;
+            }
+
+            .menu {
+                @include robotoFont(700, 14px);
+            }
+        }
+
+        .icon {
+
+            img {
+                max-width: 140px;
+                max-height: 60px;
+                padding: 5px 0px;
+            }
+        }
+
+        .search {
+            padding: 0px 10px;
+
+            .gg-search {
+                color: #333333;
+            }
+        }
+    }
+}
