imported index carousel from bootstrap

--- a/scss/pages.scss/_index.scss
+++ b/scss/pages.scss/_index.scss
@@ -148,3 +148,16 @@ body {
         }
     }
 }
+
+.index-main {
+
+    .carousel {
+        margin-top: 40px 0px;
+
+        ol {
+          @media (max-width: 900px) {
+          display: none;;
+          }
+        }
+    }
+}
