--- a/css/styles.css
+++ b/css/styles.css
@@ -55,7 +55,7 @@ table {
 }
 
 a {
-  text-decoration: none;
+  text-decoration: none !important;
 }
 
 * {
@@ -66,7 +66,7 @@ body {
   width: 100%;
   max-width: 1200px;
   min-width: 320px;
-  margin: 0 auto;
+  margin: 0 auto !important;
 }
 
 body {
@@ -229,4 +229,13 @@ body .wrap {
 }
 .header .responsive-header .search .gg-search {
   color: #333333;
+}
+
+.index-main .carousel {
+  margin-top: 40px 0px;
+}
+@media (max-width: 900px) {
+  .index-main .carousel ol {
+    display: none;
+  }
 }/*# sourceMappingURL=styles.css.map */
