--- a/css/styles.css
+++ b/css/styles.css
@@ -232,7 +232,7 @@ body .wrap {
 }
 
 .index-main .carousel {
-  margin-top: 40px 0px;
+  margin: 40px 0px;
 }
 @media (max-width: 900px) {
   .index-main .carousel ol {
