--- a/scss/pages.scss/_index.scss
+++ b/scss/pages.scss/_index.scss
@@ -152,7 +152,7 @@ body {
 .index-main {
 
     .carousel {
-        margin-top: 40px 0px;
+        margin: 40px 0px;
 
         ol {
           @media (max-width: 900px) {
