--- a/css/styles.css
+++ b/css/styles.css
@@ -232,10 +232,45 @@ body .wrap {
 }
 
 .index-main .carousel {
-  margin: 40px 0px;
+  margin: 25px 0px;
 }
 @media (max-width: 900px) {
   .index-main .carousel ol {
     display: none;
   }
+}
+.index-main .section2 {
+  margin: 50px 0px;
+}
+.index-main .section2 .images {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.index-main .section2 .images div {
+  text-align: center;
+  width: 300px;
+  padding: 50px;
+}
+.index-main .section2 .images img {
+  max-width: 70px;
+}
+.index-main .section2 .images h4 {
+  font-weight: 600;
+  font-size: 15px;
+  color: #777777;
+  margin: 0px;
+}
+.index-main .section2 .images p {
+  color: #777777;
+  font-size: 15px;
+}
+.index-main .section2 .phones-text h1 {
+  color: #2d2a2a;
+  font-weight: 600;
+  font-size: 28px;
+  text-align: center;
+  margin: 60px 0px;
 }/*# sourceMappingURL=styles.css.map */
