--- a/scss/pages.scss/_index.scss
+++ b/scss/pages.scss/_index.scss
@@ -204,3 +204,55 @@ body {
         }
     }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+footer {
+    background-color: #e5e5e5;
+
+    .footer-wrap {
+        @include goFlex(row, space-between, center);
+        padding: 0px 35px;
+        height: 95px;
+        border-color: rgba(255, 255, 255, .1);
+    }
+
+    .footer-image {
+
+        img {
+            height: 55px;
+        }
+    }
+
+    .footer-location {
+        
+        p {
+            color: #929292;
+            font-size: 15px;
+            margin-top: 10px;
+        }
+    }
+}
