--- a/css/styles.css
+++ b/css/styles.css
@@ -160,7 +160,8 @@ body .wrap {
   border-top-right-radius: 30px;
   border-bottom-right-radius: 30px;
   width: 52px;
-  padding-left: 18px;
+  padding-left: 5px;
+  font-size: 18px;
   right: 0;
   top: 0;
   bottom: 0;
@@ -227,7 +228,8 @@ body .wrap {
 .header .responsive-header .search {
   padding: 0px 10px;
 }
-.header .responsive-header .search .gg-search {
+.header .responsive-header .search .search-icon {
+  font-size: 18px;
   color: #333333;
 }
 
@@ -305,4 +307,19 @@ footer .footer-location p {
   color: #929292;
   font-size: 15px;
   margin-top: 10px;
+}
+
+.scroll-on-top {
+  position: fixed;
+  right: 12px;
+  bottom: 12px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.9);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.17);
+  color: #333;
+  text-align: center;
+  font-size: 0;
+  transition: all 0.25s ease;
 }/*# sourceMappingURL=styles.css.map */
