--- a/scss/pages.scss/_index.scss
+++ b/scss/pages.scss/_index.scss
@@ -80,7 +80,8 @@ body {
                 border-top-right-radius: 30px;
                 border-bottom-right-radius: 30px;
                 width: 52px;
-                padding-left: 18px;
+                padding-left: 5px;
+                font-size: 18px;
                 right: 0;
                 top: 0;
                 bottom: 0;
@@ -142,7 +143,8 @@ body {
         .search {
             padding: 0px 10px;
 
-            .gg-search {
+            .search-icon {
+                font-size: 18px;
                 color: #333333;
             }
         }
@@ -260,4 +262,19 @@ footer {
             margin-top: 10px;
         }
     }
+}
+
+.scroll-on-top {
+    position: fixed;
+    right: 12px;
+    bottom: 12px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, .9);
+    box-shadow: 0 0 5px rgba(0, 0, 0, .17);
+    color: #333;
+    text-align: center;
+    font-size: 0;
+    transition: all .25s ease;
 }
