--- a/scss/pages.scss/_index.scss
+++ b/scss/pages.scss/_index.scss
@@ -29,6 +29,7 @@ body {
 
         ul {
             display: flex;
+            margin-bottom: 0px;
 
             a {
                 @include robotoFont(600, 14px);
@@ -54,6 +55,7 @@ body {
 
         ul {
             display: flex;
+            margin-bottom: 0px;
 
             a {
                 @include robotoFont(700, 14px);
@@ -202,6 +204,37 @@ body {
                 font-size: 28px;
                 text-align: center;
                 margin: 60px 0px;
+            }
+        }
+    }
+
+    .section3 {
+        
+
+        .section-3-div {
+            @include goFlex(row, space-evenly);
+
+            div {
+                margin: 10px 0px;
+                padding: 0px 10px;
+                text-align: center;
+
+                img {
+                    max-width: 250px;
+                }
+
+                p {
+                    @include robotoFont(400, 14px);
+                    color: #333333;
+                    padding: 20px 0px;
+                    margin: 0px;
+                }
+
+                h2 {
+                    @include robotoFont(700, 20px);
+                    color: #8e03a4;
+                    margin: 0px;
+                }
             }
         }
     }
