--- a/scss/pages.scss/_index.scss
+++ b/scss/pages.scss/_index.scss
@@ -34,7 +34,12 @@ body {
             a {
                 @include robotoFont(600, 14px);
                 padding: 0px 10px;
-                color: #333333 !important;
+                color: #333333;
+                transition: all .25s ease;
+            }
+            
+            a:hover {
+                color: #8e03a4;
             }
 
             .main {
@@ -61,6 +66,11 @@ body {
                 @include robotoFont(700, 14px);
                 color: white;
                 padding: 0px 10px;
+                transition: all .25s ease;  
+            }
+
+            a:hover {
+                color: lightgray;
             }
         }
 
@@ -87,6 +97,11 @@ body {
                 right: 0;
                 top: 0;
                 bottom: 0;
+                transition: all .25s ease;  
+            }
+
+            button:hover {
+                background-color: purple;
             }
 
             ::placeholder {
@@ -214,14 +229,22 @@ body {
         .section-3-div {
             @include goFlex(row, space-evenly);
             margin-bottom: 150px;
+            
 
             div {
                 margin: 10px 0px;
                 padding: 0px 10px;
                 text-align: center;
+                transition: all .25s ease;
+
 
                 img {
                     max-width: 250px;
+                    transition: all .25s ease;
+                }
+
+                img:hover {
+                    transform: scale(1.05)
                 }
 
                 p {
@@ -229,12 +252,23 @@ body {
                     color: #333333;
                     padding: 20px 0px;
                     margin: 0px;
+                    transition: all .25s ease;
+                }
+
+                p:hover {
+                    color: #777777;
                 }
 
                 h2 {
                     @include robotoFont(700, 20px);
                     color: #8e03a4;
                     margin: 0px;
+                    transition: all .25s ease;
+
+                }
+
+                h2:hover {
+                    transform: scale(1.01);
                 }
             }
         }
