--- a/css/styles.css
+++ b/css/styles.css
@@ -373,8 +373,8 @@ footer .footer-location p {
   position: fixed;
   right: 12px;
   bottom: 12px;
-  width: 40px;
-  height: 40px;
+  width: 45px;
+  height: 45px;
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.9);
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.17);
@@ -382,4 +382,9 @@ footer .footer-location p {
   text-align: center;
   font-size: 0;
   transition: all 0.25s ease;
+}
+.scroll-on-top i {
+  font-size: 25px;
+  margin-top: 10px;
+  color: #333333;
 }/*# sourceMappingURL=styles.css.map */
