--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -4,4 +4,5 @@
 @import "mixins";
 
 @import "pages.scss/index";
-@import "pages.scss/about-us"
+@import "pages.scss/about-us";
+@import "pages.scss/contact";
