--- a/css/styles.css
+++ b/css/styles.css
@@ -119,7 +119,7 @@ body .wrap {
 .header .top ul a:hover {
   color: #8e03a4;
 }
-.header .top ul .main {
+.header .top ul .header-main {
   color: #8e03a4 !important;
 }
 .header .bottom {
@@ -408,6 +408,9 @@ body .wrap {
   flex-wrap: nowrap;
   margin: 40px 0px;
   padding: 0px 40px;
+}
+.contact-main .left {
+  min-width: 450px;
 }
 .contact-main .left .text h1 {
   font-size: 22px;
