--- a/scss/pages.scss/_index.scss
+++ b/scss/pages.scss/_index.scss
@@ -42,9 +42,11 @@ body {
                 color: #8e03a4;
             }
 
-            .main {
+            .header-main {
                 color: #8e03a4 !important;
             }
+
+
         }
     }
 
