--- a/css/styles.css
+++ b/css/styles.css
@@ -319,7 +319,7 @@ body .wrap {
   color: #333333;
   padding: 20px 0px;
   margin: 0px;
-  transition: all 0.25s ease;
+  transition: all 0.25s linear;
 }
 .index-main .section3 .section-3-div div p:hover {
   color: #777777;
@@ -331,10 +331,10 @@ body .wrap {
   line-height: 10px;
   color: #8e03a4;
   margin: 0px;
-  transition: all 0.25s ease;
+  transition: all 0.25s linear;
 }
 .index-main .section3 .section-3-div div h2:hover {
-  transform: scale(1.01);
+  transform: scale(1.02);
 }
 
 .footer {
@@ -382,12 +382,17 @@ body .wrap {
   color: #333;
   text-align: center;
   font-size: 0;
-  transition: all 0.25s ease;
+  transition: all 1s ease;
 }
 .scroll-on-top i {
   font-size: 25px;
   margin-top: 10px;
   color: #333333;
+  transition: all 0.25s ease;
+}
+
+.scroll-on-top:hover i {
+  transform: scale(1.15);
 }
 
 .about-us-main article {
