--- a/css/styles.css
+++ b/css/styles.css
@@ -405,22 +405,30 @@ body .wrap {
   line-height: 25px;
 }
 
-.contact-main section {
+.contact-main .contact-section-1 {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   flex-wrap: nowrap;
   margin: 40px 0px;
-  padding: 0px 40px;
+  padding: 0px 20px;
+}
+@media (max-width: 800px) {
+  .contact-main .contact-section-1 {
+    flex-direction: column;
+    align-items: flex-start;
+  }
 }
 .contact-main .left {
-  min-width: 450px;
+  min-width: 350px;
+  padding: 0px 20px;
 }
 .contact-main .left .text h1 {
   font-size: 22px;
   font-weight: 600;
   color: #2d2a2a;
+  margin-bottom: 20px;
 }
 .contact-main .left .text li {
   font-family: "Roboto";
@@ -438,6 +446,7 @@ body .wrap {
   justify-content: flex-start;
   align-items: center;
   flex-wrap: wrap;
+  padding: 20px 0px;
 }
 .contact-main .left .icons a {
   width: 40px;
@@ -446,4 +455,16 @@ body .wrap {
   background-color: #37AEE2;
   color: #ffffff !important;
   margin: 5px;
+}
+.contact-main .right {
+  width: 100%;
+  padding: 0px 20px;
+}
+@media (max-width: 1000px) {
+  .contact-main .right {
+    padding: 0px;
+  }
+}
+.contact-main .right .iframe {
+  width: 100%;
 }/*# sourceMappingURL=styles.css.map */
