--- a/scss/pages.scss/_contact.scss
+++ b/scss/pages.scss/_contact.scss
@@ -1,20 +1,27 @@
 .contact-main {
 
-    section {
+    .contact-section-1 {
         @include goFlex(row, space-between, center, nowrap); 
         margin: 40px 0px;   
-        padding: 0px 40px;
+        padding: 0px 20px;
+
+
+        @media (max-width: 800px) {
+            flex-direction: column;
+            align-items: flex-start;
+        }
     }
 
     .left {
-        min-width: 450px;
-
+        min-width: 350px;
+        padding: 0px 20px;
         .text {
 
             h1 {
                 font-size: 22px;
                 font-weight: 600;
                 color: #2d2a2a;
+                margin-bottom: 20px
             }
 
             li {
@@ -29,6 +36,7 @@
 
         .icons {
             @include goFlex(row, flex-start, center);
+            padding: 20px 0px;
 
 
             a {
@@ -42,5 +50,17 @@
         }
     }
 
+    .right {
 
+        @media (max-width: 1000px) {
+            padding: 0px;
+        }
+
+        width: 100%;
+        padding: 0px 20px;
+
+        .iframe {
+            width: 100%;
+        }
+    }
 }
