imported header & footer in news html

--- a/css/styles.css
+++ b/css/styles.css
@@ -514,4 +514,6 @@ body .wrap {
 }
 .contact-main .right .iframe {
   width: 100%;
-}/*# sourceMappingURL=styles.css.map */
+}
+
+@impo;/*# sourceMappingURL=styles.css.map */
