--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -6,7 +6,7 @@
     flex-wrap: $wrap;
 }
 
-@mixin robotoFont($weight: 400, $size: 12px, $height: 10px) {
+@mixin robotoFont($weight: 400, $size: 12px, $height: auto) {
     font-family: "Roboto";
     font-weight: $weight;
     font-size: $size;
