--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -6,4 +6,4 @@
 @import "pages.scss/index";
 @import "pages.scss/about-us";
 @import "pages.scss/contact";
-@import "news";
+@import "pages.scss/news";
