--- a/css/styles.css
+++ b/css/styles.css
@@ -299,13 +299,13 @@ body .wrap {
   margin-bottom: 150px;
 }
 .index-main .section3 .section-3-div div {
-  margin: 10px 0px;
-  padding: 0px 10px;
+  margin: 30px 0px;
   text-align: center;
   transition: all 0.25s ease;
+  max-width: 255px;
 }
 .index-main .section3 .section-3-div div img {
-  max-width: 250px;
+  max-width: 255px;
   transition: all 0.25s ease;
 }
 .index-main .section3 .section-3-div div img:hover {
@@ -315,7 +315,7 @@ body .wrap {
   font-family: "Roboto";
   font-weight: 400;
   font-size: 14px;
-  line-height: 10px;
+  line-height: 20px;
   color: #333333;
   padding: 20px 0px;
   margin: 0px;
@@ -514,6 +514,4 @@ body .wrap {
 }
 .contact-main .right .iframe {
   width: 100%;
-}
-
-@impo;/*# sourceMappingURL=styles.css.map */
+}/*# sourceMappingURL=styles.css.map */
