--- a/scss/pages.scss/_index.scss
+++ b/scss/pages.scss/_index.scss
@@ -234,14 +234,14 @@ body {
             
 
             div {
-                margin: 10px 0px;
-                padding: 0px 10px;
+                margin: 30px 0px;
                 text-align: center;
                 transition: all .25s ease;
+                max-width: 255px;
 
 
                 img {
-                    max-width: 250px;
+                    max-width: 255px;
                     transition: all .25s ease;
                 }
 
@@ -250,7 +250,7 @@ body {
                 }
 
                 p {
-                    @include robotoFont(400, 14px);
+                    @include robotoFont(400, 14px, 20px);
                     color: #333333;
                     padding: 20px 0px;
                     margin: 0px;
