--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -7,3 +7,5 @@
 @import "pages.scss/about-us";
 @import "pages.scss/contact";
 @import "pages.scss/news";
+@import "pages.scss/samsung";
+@import "pages.scss/apple";
