--- a/scss/pages.scss/_index.scss
+++ b/scss/pages.scss/_index.scss
@@ -264,7 +264,7 @@ body {
                     @include robotoFont(700, 20px);
                     color: #8e03a4;
                     margin: 0px;
-                    transition: all .25s linear;
+                    transition: all 0.25s linear;
 
                 }
 
