--- a/css/styles.css
+++ b/css/styles.css
@@ -516,6 +516,69 @@ body .wrap {
   width: 100%;
 }
 
+.news-section-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-wrap: wrap;
+}
+.news-section-wrapper div {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  max-width: 30.333333%;
+  padding: 10px;
+  margin: 10px;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.12);
+  transition: box-shadow 0.35s ease;
+}
+.news-section-wrapper div img {
+  max-width: 100%;
+}
+.news-section-wrapper div h1 {
+  font-family: "Roboto";
+  font-weight: 700;
+  font-size: 22px;
+  line-height: auto;
+  text-align: center;
+  color: #2d2a2a;
+}
+.news-section-wrapper div p {
+  font-family: "Roboto";
+  font-weight: 400;
+  font-size: 14px;
+  line-height: auto;
+  color: #777777;
+  text-align: center;
+}
+.news-section-wrapper div .continiue {
+  font-weight: 600;
+}
+.news-section-wrapper .ios17 {
+  height: 535px;
+}
+.news-section-wrapper .new-device {
+  height: 538px;
+}
+.news-section-wrapper .samsung-ring {
+  height: 600px;
+}
+.news-section-wrapper .new-audi {
+  height: 530px;
+}
+.news-section-wrapper .apple-store {
+  height: 610px;
+}
+.news-section-wrapper .apple-2022 {
+  height: 540px;
+}
+.news-section-wrapper .s22-sales {
+  height: 500px;
+}
+
 .wrapper .phones .phones-div {
   display: flex;
   flex-direction: row;
@@ -554,7 +617,7 @@ body .wrap {
   font-family: "Roboto";
   font-weight: 700;
   font-size: 20px;
-  line-height: 10px;
+  line-height: auto;
   color: #8e03a4;
   margin: 0px;
   transition: all 0.25s linear;
