--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -9,3 +9,4 @@
 @import "pages.scss/news";
 @import "pages.scss/samsung";
 @import "pages.scss/apple";
+@import "pages.scss/phones.scss/iphone-xr-64gb";
