--- a/css/styles.css
+++ b/css/styles.css
@@ -522,9 +522,10 @@ body .wrap {
   justify-content: space-evenly;
   align-items: flex-start;
   flex-wrap: wrap;
+  margin-top: 50px;
 }
 .news-section-wrapper div:hover {
-  box-shadow: 0 0 4px rgba(0, 0, 0, 0.45);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
 }
 .news-section-wrapper div {
   display: flex;
@@ -681,4 +682,23 @@ body .wrap {
   font-weight: 400;
   font-size: 13px;
   color: #000000;
+}
+
+.audi-5-g-main section .title {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.audi-5-g-main section .title p {
+  font-family: "Roboto";
+  font-weight: 400;
+  font-size: 14px;
+  line-height: auto;
+  padding: 5px;
+  margin: 25px;
+  background-color: #8e03a4;
+  color: white;
 }/*# sourceMappingURL=styles.css.map */
