--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -10,3 +10,4 @@
 @import "pages.scss/samsung";
 @import "pages.scss/apple";
 @import "pages.scss/phones.scss/iphone-xr-64gb";
+@import "pages.scss/news.pages.scss/news-pages";
